<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin4">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin4" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_step"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin4" />

</LinearLayout>


