...
        android:id="@+id/playerLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/mediaPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/thumbnailPlayer"
            android:layout_gravity="center"
...
